duplicate emimination. some how...