@@ -10,13 +10,11 @@ import gnu.trove.set.hash.TIntHashSet;
 import org.junit.Test;
 import phylo.tree.algorithm.flipcut.mincut.cutGraphAPI.GoldbergTarjanCutGraph;
 import phylo.tree.algorithm.flipcut.mincut.cutGraphAPI.KargerSteinCutGraph;
-import phylo.tree.algorithm.flipcut.mincut.cutGraphAPI.bipartition.HyperCut;
+import phylo.tree.algorithm.flipcut.mincut.cutGraphAPI.bipartition.AbstractBipartition;
+import phylo.tree.algorithm.flipcut.mincut.cutGraphAPI.bipartition.DefaultBipartition;
 import phylo.tree.algorithm.flipcut.mincut.cutGraphAPI.bipartition.STCut;
 
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.LinkedList;
-import java.util.Set;
+import java.util.*;
 import java.util.concurrent.ExecutionException;
 
 import static org.junit.Assert.assertEquals;
@@ -34,7 +32,7 @@ public class KargerSteinMastaPTest {
 
         KargerStein cutter = new KargerStein();
         Graph cuttedGraph = cutter.getMinCut(arr);
-        assertEquals(3,(int)cuttedGraph.mincutValue());
+        assertEquals(3, (int) cuttedGraph.mincutValue());
     }
 
     @Test
@@ -76,23 +74,23 @@ public class KargerSteinMastaPTest {
 
 
             long time2 = System.currentTimeMillis();
-            KargerSteinCutGraph<Integer> kargi = new KargerSteinCutGraph<>();
+            KargerSteinCutGraph<Integer, DefaultBipartition.Factory<Integer>> kargi = new KargerSteinCutGraph<>(new DefaultBipartition.Factory<Integer>());
             for (TIntSet edge : edges) {
                 int[] e = edge.toArray();
                 kargi.addEdge(e[0], e[1], 1);
             }
 
-            LinkedList<HyperCut<Integer>> randCuts = kargi.calculateMinCuts();
+            List<AbstractBipartition<Integer>> randCuts = kargi.calculateMinCuts();
             System.out.println(randCuts.size());
-            HyperCut<Integer> randCut = randCuts.getFirst();
-            int[] rc = randCut.cutTaxaSource.stream().sorted((i, j) -> Integer.compare(j, i)).mapToInt(i -> ((int) i)).toArray();
-            System.out.println("Karger Score: " + randCut.minCutValue + " Cutset: " + Arrays.toString(rc));
+            AbstractBipartition<Integer> randCut = randCuts.get(0);
+            int[] rc = randCut.getCutSet().stream().sorted((i, j) -> Integer.compare(j, i)).mapToInt(i -> ((int) i)).toArray();
+            System.out.println("Karger Score: " + randCut.minCutValue() + " Cutset: " + Arrays.toString(rc));
             System.out.println("time" + (System.currentTimeMillis() - time2) / 1000d);
 
-            if (randCut.minCutValue() != 3){
+            if (randCut.minCutValue() != 3) {
                 System.out.println("fail");
             }
-            assertEquals(goldCut.minCutValue(),randCut.minCutValue());
+            assertEquals(goldCut.minCutValue(), randCut.minCutValue());
         }
     }
 }
